@@ -1,3 +1,8 @@
+2023-09-08  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (LinkingTo): Add RcppInt64
+	* src/hasher.cpp: Use RcppInt64 package
+
 2022-11-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3
